public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/39/source/compile
source.c: In function ‘main’:
source.c:7:18: error: ‘i’ undeclared (first use in this function)
  for (index = 0; i < n; i++)
                  ^
source.c:7:18: note: each undeclared identifier is reported only once for each function it appears in
